namespace sf.systems.rentals.cars
{
    public enum DataType
    {
        CSV,
        JSON
    }
}
