from enum import Enum

class EntityType(Enum):
    CUSTOMER = 1
    CAR = 2
    TRANSACTION = 3
